k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hexagen-web
  namespace: ${K8S_NAMESPACE}
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: ${HOST}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hexagen-web
                port:
                  number: 80
